# arxiv-recent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
arxiv_recent/: __init__.py  __main__.py  cli.py  config.py  db.py  fetcher.py  llm.py  renderer.py  scheduler.py  summarizer.py
arxiv_recent/push/: __init__.py  email_push.py  qq.py  telegram.py
tests/: conftest.py  test_config.py  test_db.py  test_fetcher.py  test_llm.py  test_qq.py  test_renderer.py  test_summarizer.py
