[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-recent"
version = "0.1.0"
description = "Daily arXiv paper digest with LLM summarization"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "tenacity>=8.2,<10",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.3,<1",
]

[tool.setuptools.packages.find]
include = ["arxiv_recent*"]

[project.scripts]
arxiv-recent = "arxiv_recent.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
